--- a/references.bib
+++ b/references.bib
@@ -15,62 +15,6 @@
   urldate = {2025-10-15}
 }
 
-@online{gcc-docs,
-  title   = {GCC Online Documentation},
-  organization = {GNU Project},
-  url     = {https://gcc.gnu.org/onlinedocs/},
-  urldate = {2025-10-15}
-}
-
-@online{clang-docs,
-  title   = {Clang Documentation},
-  organization = {LLVM Project},
-  url     = {https://clang.llvm.org/docs/},
-  urldate = {2025-10-15}
-}
-
-@online{vscode-cpp,
-  title   = {C++ in Visual Studio Code},
-  organization = {Microsoft},
-  url     = {https://code.visualstudio.com/docs/languages/cpp},
-  urldate = {2025-10-15}
-}
-
-@online{gnu-make,
-  title   = {GNU make Manual},
-  organization = {GNU Project},
-  url     = {https://www.gnu.org/software/make/manual/make.html},
-  urldate = {2025-10-15}
-}
-
-@online{cpp-modules,
-  title   = {Modules (since C++20)},
-  organization = {cppreference},
-  url     = {https://en.cppreference.com/w/cpp/language/modules},
-  urldate = {2025-10-15}
-}
-
-@online{cmake-docs,
-  title   = {CMake Documentation (Latest)},
-  organization = {Kitware},
-  url     = {https://cmake.org/cmake/help/latest/},
-  urldate = {2025-10-15}
-}
-
-@online{wsl,
-  title   = {Windows Subsystem for Linux documentation},
-  organization = {Microsoft Learn},
-  url     = {https://learn.microsoft.com/windows/wsl/},
-  urldate = {2025-10-15}
-}
-
-@online{msys2,
-  title   = {MSYS2: Software Distribution and Building Platform for Windows},
-  organization = {MSYS2 Project},
-  url     = {https://www.msys2.org/},
-  urldate = {2025-10-15}
-}
-
 @online{lazarus,
   title   = {Lazarus IDE},
   organization = {Free Pascal and Lazarus Wiki},
@@ -92,33 +36,6 @@
   urldate = {2025-10-15}
 }
 
-@online{onlinegdb,
-  title   = {OnlineGDB online compiler and debugger},
-  organization = {OnlineGDB},
-  url     = {https://www.onlinegdb.com/},
-  urldate = {2025-10-15}
-}
-
-@online{codeblocks,
-  title   = {Code::Blocks IDE},
-  organization = {The Code::Blocks Team},
-  url     = {http://www.codeblocks.org/},
-  urldate = {2025-10-15}
-}
-
-@online{onlinegdb,
-  title   = {OnlineGDB Online Compiler and Debugger},
-  organization = {OnlineGDB},
-  url     = {https://www.onlinegdb.com/},
-  urldate = {2025-10-15}
-}
-
-@online{codeblocks,
-  title   = {Code::Blocks IDE},
-  organization = {The Code::Blocks Team},
-  url     = {https://www.codeblocks.org/},
-  urldate = {2025-10-15}
-}
 
 @online{cpp-std-array,
   title   = {std::array},
@@ -150,7 +67,7 @@
 
 @online{gnu-c-manual,
   title   = {The GNU C Reference Manual},
-  author  = {Trevor {Brannon} and D. {Maciulis} and others},
+  author  = {Trevor {Brannon} and D. {Maciulis}},
   organization = {GNU Project},
   url     = {https://www.gnu.org/software/gnu-c-manual/gnu-c-manual.html},
   urldate = {2025-10-15}
@@ -168,27 +85,6 @@
   title   = {cppreference.com encyclopedia},
   organization = {cppreference},
   url     = {https://en.cppreference.com/w/},
-  urldate = {2025-10-15}
-}
-
-@online{cpp-unique-ptr-array,
-  title   = {std::unique_ptr<T[]> specialized for arrays},
-  organization = {cppreference},
-  url     = {https://en.cppreference.com/w/cpp/memory/unique_ptr},
-  urldate = {2025-10-15}
-}
-
-@online{cpp-std-function,
-  title   = {std::function},
-  organization = {cppreference},
-  url     = {https://en.cppreference.com/w/cpp/utility/functional/function},
-  urldate = {2025-10-15}
-}
-
-@online{cpp-smart-pointers,
-  title   = {Smart pointers overview},
-  organization = {cppreference},
-  url     = {https://en.cppreference.com/w/cpp/memory},
   urldate = {2025-10-15}
 }
 
@@ -210,13 +106,6 @@
   title   = {Operator overloading (C++)},
   organization = {cppreference},
   url     = {https://en.cppreference.com/w/cpp/language/operators#Overloaded_operators},
-  urldate = {2025-10-15}
-}
-
-@online{cpp-if,
-  title   = {if statement (C++)},
-  organization = {cppreference},
-  url     = {https://en.cppreference.com/w/cpp/language/if},
   urldate = {2025-10-15}
 }
 
@@ -276,29 +165,6 @@
   urldate = {2025-10-15}
 }
 
-@online{cpp-fstream,
-  title   = {fstream - file stream classes},
-  organization = {cppreference},
-  url     = {https://en.cppreference.com/w/cpp/io/basic_fstream},
-  urldate = {2025-10-15}
-}
-
-@online{cpp-seek-tell,
-  title   = {basic_istream::seekg, tellg},
-  organization = {cppreference},
-  url     = {https://en.cppreference.com/w/cpp/io/basic_istream/seekg},
-  urldate = {2025-10-15}
-}
-
-@book{kr-c,
-  key     = {k&r-c-output-input},
-  author  = {Brian W. Kernighan and Dennis M. Ritchie},
-  title   = {The C Programming Language},
-  edition = {2},
-  year    = {1988},
-  publisher = {Prentice Hall}
-}
-
 @online{c-struct,
   title   = {Structure and union specifiers (\S6.7.2.1)},
   organization = {WG14 C11 Draft n1570},
@@ -339,4 +205,210 @@
   organization = {Wikibooks: Pascal Programming},
   url     = {https://en.wikibooks.org/wiki/Pascal_Programming/Procedures_and_Functions},
   urldate = {2025-10-15}
+}
+
+@online{cplusplus-arrays,
+  title   = {Arrays (C++)},
+  organization = {cplusplus.com},
+  url     = {https://cplusplus.com/doc/tutorial/arrays/},
+  urldate = {2025-10-15},
+  note    = {Open access tutorial}
+}
+
+@online{tutorialspoint-c-arrays,
+  title   = {C - Arrays},
+  organization = {TutorialsPoint},
+  url     = {https://www.tutorialspoint.com/cprogramming/c_arrays.htm},
+  urldate = {2025-10-15},
+  note    = {Open access tutorial}
+}
+
+@online{learncpp-arrays,
+  title   = {Introduction to std::array},
+  organization = {LearnCpp.com},
+  url     = {https://www.learncpp.com/cpp-tutorial/an-introduction-to-stdarray/},
+  urldate = {2025-10-15},
+  note    = {Open access tutorial}
+}
+
+@online{geeksforgeeks-array-init,
+  title   = {Different ways to Initialize an array in C++},
+  organization = {GeeksforGeeks},
+  url     = {https://www.geeksforgeeks.org/different-ways-to-initialize-an-array-in-c/},
+  urldate = {2025-10-15},
+  note    = {Open access}
+}
+
+@online{cppreference-array,
+  title   = {std::array},
+  organization = {cppreference},
+  url     = {https://en.cppreference.com/w/cpp/container/array},
+  urldate = {2025-10-15}
+}
+
+@online{cppreference-algorithm,
+  title   = {Standard library header <algorithm>},
+  organization = {cppreference},
+  url     = {https://en.cppreference.com/w/cpp/header/algorithm},
+  urldate = {2025-10-15}
+}
+
+@online{tutorialspoint-2d-arrays,
+  title   = {Two Dimensional Array in C},
+  organization = {TutorialsPoint},
+  url     = {https://www.tutorialspoint.com/cprogramming/c_two_dimensional_arrays.htm},
+  urldate = {2025-10-15},
+  note    = {Open access tutorial}
+}
+
+@online{cplusplus-multidimensional,
+  title   = {Multidimensional arrays},
+  organization = {cplusplus.com},
+  url     = {https://cplusplus.com/doc/tutorial/arrays/},
+  urldate = {2025-10-15},
+  note    = {Open access tutorial}
+}
+
+@online{geeksforgeeks-2d-array,
+  title   = {Multidimensional Arrays in C},
+  organization = {GeeksforGeeks},
+  url     = {https://www.geeksforgeeks.org/multidimensional-arrays-c-cpp/},
+  urldate = {2025-10-15},
+  note    = {Open access}
+}
+
+@online{learncpp-multidimensional,
+  title   = {Multidimensional Arrays},
+  organization = {LearnCpp.com},
+  url     = {https://www.learncpp.com/cpp-tutorial/multidimensional-arrays/},
+  urldate = {2025-10-15},
+  note    = {Open access tutorial}
+}
+
+@online{geeksforgeeks-matrix-operations,
+  title   = {Matrix Operations in C},
+  organization = {GeeksforGeeks},
+  url     = {https://www.geeksforgeeks.org/c-program-multiply-two-matrices/},
+  urldate = {2025-10-15},
+  note    = {Open access}
+}
+
+@online{duniailkom-cpp-2d-array,
+  title   = {Tutorial Belajar C++: Cara Membuat Array 2 Dimensi},
+  organization = {Duniailkom},
+  url     = {https://www.duniailkom.com/tutorial-belajar-cpp-cara-membuat-array-2-dimensi/},
+  urldate = {2025-10-16},
+  note    = {Open access tutorial}
+}
+
+@online{tambahpinter-array,
+  title   = {Buatlah Program Array Dimensi Satu dengan 10 Elemen Bertipe Integer},
+  organization = {TambahPinter},
+  url     = {https://tambahpinter.com/buatlah-program-array-dimensi-satu-dengan-10-elemen-bertipe-integer/},
+  urldate = {2025-10-16},
+  note    = {Open access tutorial}
+}
+
+@online{galuhratna-array-c,
+  title   = {Array Dalam Bahasa C},
+  organization = {Dapur Elektronya Galuh},
+  url     = {https://galuhratna.alza.web.id/blog/2020/03/array-dalam-bahasa-c/},
+  urldate = {2025-10-16},
+  note    = {Open access tutorial}
+}
+
+@online{tutorialpemrograman-array-c,
+  title   = {Array dalam Bahasa C},
+  organization = {Tutorial Pemrograman Komputer Sederhana},
+  url     = {https://tutorialpemrograman.wordpress.com/2008/02/12/array-dalam-bahasa-c/},
+  urldate = {2025-10-16},
+  note    = {Open access tutorial}
+}
+
+@online{hobikoding-string-python,
+  title   = {String dan Manipulasi String di Python},
+  organization = {HobiKoding},
+  url     = {https://hobikoding.com/string-dan-manipulasi-string/},
+  urldate = {2025-10-17},
+  note    = {Open access tutorial}
+}
+
+@online{jagongoding-string-python,
+  title   = {Python: Manipulasi String},
+  organization = {Jago Ngoding},
+  url     = {https://jagongoding.com/python/menengah/manipulasi-string-part-1/},
+  urldate = {2025-10-17},
+  note    = {Open access tutorial}
+}
+
+@online{yuliaagustin-string-cpp,
+  title   = {Manipulasi String di C++},
+  author  = {Yulia Agustin},
+  url     = {https://yuliaagustin2992.blogspot.com/2017/12/manipulasi-string-di-c.html},
+  urldate = {2025-10-17},
+  note    = {Open access tutorial}
+}
+
+@online{tutorialspoint-c-strings,
+  title   = {C - Strings},
+  organization = {TutorialsPoint},
+  url     = {https://www.tutorialspoint.com/cprogramming/c_strings.htm},
+  urldate = {2025-10-17},
+  note    = {Open access tutorial}
+}
+
+@online{cplusplus-string,
+  title   = {std::string - C++ Reference},
+  organization = {cplusplus.com},
+  url     = {https://cplusplus.com/reference/string/string/},
+  urldate = {2025-10-17},
+  note    = {Open access reference}
+}
+
+@online{duniailkom-struct-c,
+  title   = {Tutorial Belajar C: Pengertian dan Contoh Kode Program Tipe Data Struct},
+  organization = {Duniailkom},
+  url     = {https://www.duniailkom.com/tutorial-belajar-c-pengertian-dan-contoh-kode-program-tipe-data-struct/},
+  urldate = {2025-10-17},
+  note    = {Open access tutorial}
+}
+
+@online{exabytes-struct,
+  title   = {Apa Itu Struct Adalah: Pengertian, Fungsi, dan Cara Menggunakannya},
+  organization = {Exabytes Indonesia},
+  url     = {https://www.exabytes.co.id/blog/apa-itu-struct-adalah/},
+  urldate = {2025-10-17},
+  note    = {Open access tutorial}
+}
+
+@online{tutorialspoint-c-structures,
+  title   = {C - Structures},
+  organization = {TutorialsPoint},
+  url     = {https://www.tutorialspoint.com/cprogramming/c_structures.htm},
+  urldate = {2025-10-17},
+  note    = {Open access tutorial}
+}
+
+@online{tutorialspoint-c-pointers,
+  title   = {C - Pointers},
+  organization = {TutorialsPoint},
+  url     = {https://www.tutorialspoint.com/cprogramming/c_pointers.htm},
+  urldate = {2025-10-17},
+  note    = {Open access tutorial}
+}
+
+@online{geeksforgeeks-pointers,
+  title   = {Pointers in C},
+  organization = {GeeksforGeeks},
+  url     = {https://www.geeksforgeeks.org/c-pointers/},
+  urldate = {2025-10-17},
+  note    = {Open access}
+}
+
+@online{cppreference-smart-pointers,
+  title   = {Smart pointers},
+  organization = {cppreference},
+  url     = {https://en.cppreference.com/w/cpp/memory},
+  urldate = {2025-10-17},
+  note    = {Open access reference}
 }
